# python-scpi

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  autopep8_and_friends.sh  devel_requirements.txt  pyproject.toml  requirements.txt  scpi.py  serial_monitor.py  setup.py  tox.ini
devices/: hp6632b.py
docker/: entrypoint-test.sh  entrypoint.sh  pre_commit_init.sh
errors/: __init__.py
examples/: hp6632b.py  hp6632b_serial.py  multimeter_tcp.py  prologix_usb.py  tdklambda_tcp.py
module/: __init__.py  scpi.py  serial_monitor.py
module/devices/: hp6632b.py
module/transports/: __init__.py  baseclass.py  rs232.py
scpi/: __init__.py  scpi.py  serial_monitor.py  wrapper.py
scpi/devices/: TDKLambdaZPlus.py  generic.py  hp6632b.py  ngmo2.py
scpi/errors/: __init__.py
scpi/transports/: __init__.py  baseclass.py  rs232.py  tcp.py
scpi/transports/gpib/: __init__.py  base.py  prologix.py
src/scpi/: __init__.py  scpi.py  wrapper.py
src/scpi/devices/: TDKLambdaZPlus.py  generic.py  hp6632b.py
src/scpi/errors/: __init__.py
src/scpi/transports/: __init__.py  baseclass.py  rs232.py  tcp.py
src/scpi/transports/gpib/: __init__.py  base.py  prologix.py
tests/: __init__.py  conftest.py  test_scpi.py
transport/: baseclass.py  serial.py
transports/: baseclass.py  rs232.py  serialtransport.py
