[tool.poetry]
name = "scpi"
version = "2.5.1"
description = "Basic idea here is to make transport-independent command sender/parser and a device baseclass that implements the common SCPI commands"
authors = ["Eero af Heurlin <eero.afheurlin@iki.fi>"]
homepage = "https://github.com/rambo/python-scpi/"
repository = "https://github.com/rambo/python-scpi/"
license = "LGPL"
readme = "README.rst"

[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=scpi --cov-branch"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
coverage = "^7.4"
pytest-cov = "^4.1"
pylint = "^3.0"
black = "^24.1"
bandit = "^1.7"
mypy = "^1.8"
pre-commit = "^3.6"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
